tests/ok/generic-enum-try.ari
enum Option[T] {
  None,
  Some(T),
}

fn bump(value: Option[i64]) -> Option[i64] {
  let inner = value?;
  return Some(inner + 2);
}

fn main() -> i64 {
  return bump(Some(40)) ?? 0;
}
