tests/errors/prelude-box-reserved.ari
fn main() -> i64 {
  let value: Box[i64] = 0;
  return value;
}
